[package]
name = "image_generator"
version = "0.1.0"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
glob = "0.3.0"
itertools = "^0.10"
image = "^0.23.14"
clap = "3.0.0-beta.4"